fixed photo cropping

--- a/src/css/news.css
+++ b/src/css/news.css
@@ -27,11 +27,11 @@
 
 .news-img-1 {
     width: 100%;
-    overflow: hidden;
-    height: auto;
+    height: 447px;
 }
 .news-img-2 {
     width: 100%;
+    height: 447px;
 }
 
 .news-text-1 {
